Capstone1 fixed whitespaces and updates

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,7 +16,7 @@ $secondary : #2D3047;
 $tertiary : #C1B098;
 
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "./../node_modules/bootstrap/scss/bootstrap";
 
 :root {
 	font-size: 18px;
@@ -58,16 +58,9 @@ $tertiary : #C1B098;
 
 }
 
-.mainbg1 {
-	background-image: url(./../images/bgpic.jpg);
-	height: 100%;
-	width: 100%;
-}
-
 .mainbg1contact {
 	background-image: url(./../images/bgpic.jpg);
-	height: 100vh;
-	width: 100%;
+	height: 94.5vh;
 }
 
 #mainbg {
@@ -111,15 +104,6 @@ $tertiary : #C1B098;
     background: no-repeat center center;
     background-size: 100% 100%;
 
-}
-
-.foot1 {
-	width: 100%;
-	bottom: 0;
-	display: block;
-	position: fixed;
-	clear: both;
-	
 }
 
 .navbar {
@@ -280,11 +264,7 @@ $tertiary : #C1B098;
 .form-control,
 .jumbotron, {
 	background-color: #D3FAC7;
-}
-
-.contain {
-	padding-top: 100px;
-}
+}	
 
 .social-links {
 	width: 25px;
